[package]
name = "fuzzyfocus"
version = "0.1.0"
authors = ["Matheus Lessa <matheus@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef", "windef", "processthreadsapi"] }
rustyline = "6.1.2"
rustyline-derive = "0.3.1"
fuzzy-matcher = "0.3.4"
