[package]
name = "fuzzyfocus"
version = "0.1.0"
authors = ["Matheus Lessa <matheus@fastmail.com>"]
edition = "2018"
description = "A simple window fuzzy switcher alternative to alt-tab for windows"
license = "MIT"

documentation = "https://github.com/matheuslessarodrigues/fuzzyfocus"
homepage = "https://github.com/matheuslessarodrigues/fuzzyfocus"
readme = "README.md"
keywords = ["tool", "cli"]
categories = "command-line-utilities"]

[dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef", "windef", "processthreadsapi"] }
rustyline = "6.1.2"
rustyline-derive = "0.3.1"
fuzzy-matcher = "0.3.4"
